overflow fixed!

--- a/themes/mt32/static/css/index.css
+++ b/themes/mt32/static/css/index.css
@@ -37,6 +37,7 @@ body {
 
 .content-inner {
     max-width: 100ch;
+    overflow: auto;
 }
 
 .follow {
@@ -67,7 +68,6 @@ body {
 
 .content {
     padding: 1em;
-
 }
 
 .post-content {
